Removed code smell's and bug's